Fixing horizontal scrollbars occasionally appearing on page after resizing.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1392,17 +1392,17 @@ room-content-margin-height = 10px
 .room-content
   position absolute
   top 0
+  left room-sidebar-width
   box-sizing border-box
-  width 100%
   height 100%
-  margin-left room-sidebar-width
+  overflow hidden
   border room-content-margin-width solid transparent
   border-top-width room-content-margin-height
   border-bottom-width room-content-margin-height
   border-radius 6px
   background-color #e4e7e8
 
-  transition margin-left .2s ease-out
+  transition left .2s ease-out
 
 .toggle-sidebar-tab
   display none
@@ -1414,7 +1414,7 @@ room-content-margin-height = 10px
 @media (max-width: 515px)
 
   .room-content:not(.out-of-the-way)
-    margin-left 41px
+    left 41px
 
   .toggle-sidebar-tab
     position fixed
